// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePage rendering render with Breadcrubs 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ConfirmationModals
    modalProps={
      Object {
        "cancelModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "cancelSelectedModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "resumeModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "resumeSelectedModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
      }
    }
    selectedRowsLen={0}
    tasksActions={
      Object {
        "cancelSelectedTasks": [Function],
        "cancelTask": [Function],
        "resumeSelectedTasks": [Function],
        "resumeTask": [Function],
      }
    }
  />
  <PageLayout
    beforeToolbarComponent={
      <UNDEFINED
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    breadcrumbOptions={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Tasks",
            "url": "/foreman_tasks/tasks",
          },
          Object {
            "caption": "action Name",
            "url": "/foreman_tasks/tasks/someid",
          },
          Object {
            "caption": "Sub tasks",
          },
        ],
      }
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks/tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <Spinner
          className=""
          inline={false}
          inverse={false}
          loading={true}
          size="lg"
        />
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[MockFunction]}
          onResume={[MockFunction]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      allRowsSelected={false}
      bulkCancelById={[MockFunction]}
      bulkCancelBySearch={[MockFunction]}
      bulkResumeById={[MockFunction]}
      bulkResumeBySearch={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      modalProps={
        Object {
          "cancelModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "cancelSelectedModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "resumeModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "resumeSelectedModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
        }
      }
      openClickedModal={[MockFunction]}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectPage={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="PENDING"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;

exports[`TasksTablePage rendering render with minimal props 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ConfirmationModals
    modalProps={
      Object {
        "cancelModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "cancelSelectedModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "resumeModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
        "resumeSelectedModal": Object {
          "modalOpen": true,
          "setModalClosed": [MockFunction],
          "setModalOpen": [MockFunction],
        },
      }
    }
    selectedRowsLen={0}
    tasksActions={
      Object {
        "cancelSelectedTasks": [Function],
        "cancelTask": [Function],
        "resumeSelectedTasks": [Function],
        "resumeTask": [Function],
      }
    }
  />
  <PageLayout
    beforeToolbarComponent={
      <UNDEFINED
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks/tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <Spinner
          className=""
          inline={false}
          inverse={false}
          loading={true}
          size="lg"
        />
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[MockFunction]}
          onResume={[MockFunction]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      allRowsSelected={false}
      bulkCancelById={[MockFunction]}
      bulkCancelBySearch={[MockFunction]}
      bulkResumeById={[MockFunction]}
      bulkResumeBySearch={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      modalProps={
        Object {
          "cancelModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "cancelSelectedModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "resumeModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
          "resumeSelectedModal": Object {
            "modalOpen": true,
            "setModalClosed": [MockFunction],
            "setModalOpen": [MockFunction],
          },
        }
      }
      openClickedModal={[MockFunction]}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectPage={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="PENDING"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;
